<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">图书馆选座</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 编辑地图的string -->
    <string name="firstfloornamestr">第一层</string>
    <string name="secondfloornamestr">第二层</string>
    <string name="thirdfloornamestr">第三层</string>
    <string name="setseatstr">设为座位</string>
    <string name="setshujia">设为书架</string>
    <string name="setbarstr">设为墙</string>
    <string name="setfieldstr">设为空地</string>
    <string name="quitstr">退出</string>
    <string name="savestr">保存/修改</string>
    <string name="setmoldstr">保存为模板</string>
    <string name="setseatnostr">设为不可用座位</string>
    <string name="recoverstr">恢复上一次</string>
    <string name="setcanleseatnostr">取消不可用座位</string>
    
    <string name="geneyqseatstr">生成疫情座位</string>
    <string name="chooseseatstr">选座位</string>
    
</resources>
